Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

============================
HYPERMAIL VERSION pre-2.1.9:
============================

 Peter McCluskey (Aug 16, 2003)
  - applied fix from Jean-Charles Meyrignac to handle 0x1A in mbox.

 Jose Kahan (Aug  14, 2003)
  - After receiving more feedback, reverted the changes done for converting the
    displayed value of the Date: header. The reason is that users like to know
    when they send a message. This information was getting lost because we
    were converting the date to the local time.
  - Made the Received on date be  shown in converted local time.
  - Added a new configuration option, indexdateformat, so that people can
    specify a different format for indexes than the one used elsewhere. If this
    variable is not defined., it'll use the dateformat by default.
  - Made the index by date compare dates independently of the value of dateformat.

 Jose Kahan (Aug  13, 2003)
  - Made the Received on footnote line use the same date format as that used for the
    Date: header on top of the messages.

 Jose Kahan (Aug  13, 2003)
  - Add the <title> WAI enhancement that I had forgotten to do for messages.
    The new format is: [subject] from [author] on [date] ([mailing list label]).
    I also removed the 64 characters maximum limit check we had on the title.
    The reason is that this is not part of the HTML specification, but rather
    a writing style. Dominique says we shouldn't be so strict in this case. In
    addition, just adding a \0 after 64 characters could break entity names and
    generate invalid HTML.

 Jose Kahan (Aug  13, 2003)
  - The mailcommand option didn't work when applied to a paragraph that had
    a previously converted href string that includes the '@' char. I added
    a quick hack to ConvURlsString to avoid doing the mailto: convertion if an href
    already exists in that line. The best solution would be to do something 
    similar to ConvURLsWithHrefs.