@@ -5,6 +5,10 @@ Version Changes for Hypermail
 HYPERMAIL VERSION pre-2.1.9:
 ============================
 
+ Jose Kahan (Aug  14, 2003)
+  - The links to the first message (aka #first) were not working in the
+    by attachment, by author, and by subject indexes.
+
  Peter McCluskey (Aug 16, 2003)
   - applied fix from Jean-Charles Meyrignac to handle 0x1A in mbox.
 
